--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -3,15 +3,11 @@ FROM --platform=linux/amd64 ubuntu:20.04 as builder
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential
 
-ADD . /repo
+COPY . /repo
 WORKDIR /repo
+RUN mkdir -p /install/usr
 RUN make -j8
-
-RUN mkdir -p /deps
-RUN ldd /repo/build/bin/ptcp | tr -s '[:blank:]' '\n' | grep '^/' | xargs -I % sh -c 'cp % /deps;'
+RUN make install DESTDIR=/install
 
 FROM ubuntu:20.04 as package
-
-COPY --from=builder /deps /deps
-COPY --from=builder /repo/build/bin/ptcp /repo/build/bin/ptcp
-ENV LD_LIBRARY_PATH=/deps
+COPY --from=builder /install /install
